[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-std = {version = "1", features = ["attributes"]}
serde_json = "1.0"
tide = "0.6.0"
virt = "0.2.11"

[package]
name = "kvm_proxy"
version = "0.1.0"
authors = ["Sebastian <spam@magical.rocks>"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3